--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "cisco",
     "displayName": "Cisco IOS Syntax",
     "description": "Cisco IOS Syntax Highlighter",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "publisher": "jamiewoodio",
+    "icon": "images/cisco.jpg",
     "engines": {
         "vscode": "^1.5.0"
     },
