--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "publisher": "jamiewoodio",
     "icon": "images/cisco.jpg",
+    "license": "MIT",
     "engines": {
         "vscode": "^1.5.0"
     },
