--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Cisco IOS Syntax Highlighter",
     "version": "1.8.1",
     "publisher": "jamiewoodio",
-    "icon": "images/cisco.jpg",
+    "icon": "images/logo.png",
     "license": "MIT",
     "engines": {
         "vscode": "^1.5.0"
