Folding for Interfaces, DHCP pools, and SSIDs. #19

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -20,5 +20,11 @@
         ["(", ")"],
         ["\"", "\""],
         ["'", "'"]
-    ]
+    ],
+    "folding": {
+      "markers": {
+        "start": "(^interface |^ip dhcp pool |^ssid )",
+        "end": "(^exit|^!)"
+      }
+    }
 }
